headers/ssd_os.h

struct lring_entry {
    void *function;
    void *ctx;
};
typedef int    (ssd_os_extension_fn) (void *context);
typedef void  *(ssd_os_stage_fn)     (void *context);
typedef int    (ssd_os_ctrl_fn)      (void);
typedef int    (ssd_os_conn_ring_fn) 	  (struct lring_entry *entry);
typedef struct pipeline *(ssd_os_conn_fn) (struct lring_entry *entry);
struct extension {
    char 	         magic[4];
    char 	         name[32];
    ssd_os_extension_fn *extension_fn;
};
struct stage {
    char 	     magic[4];
    char 	     name[32];
    ssd_os_ctrl_fn  *init_fn;
    ssd_os_ctrl_fn  *exit_fn;
    ssd_os_stage_fn *stage_fn;
};
struct pipeline {
    char  name[32];
    void *internal[2];
};
struct connector {
    char 	     	 magic[4];
    char 	     	 name[32];
    uint32_t		 nosched;  /* Set to lock a core for itself */
    ssd_os_ctrl_fn  	*init_fn;
    ssd_os_ctrl_fn  	*exit_fn;
    ssd_os_conn_fn  	*conn_fn;
    ssd_os_conn_ring_fn *ring_fn;
};
typedef void (ssd_os_thread) (int cpu, void *context);