headers/ox-block.h

struct nvm_ppa_addr {
    /* Generic structure for all addresses */
    union {
        struct {
            uint64_t sec   : 3;
            uint64_t pl    : 2;
            uint64_t ch    : 12;
            uint64_t lun   : 6;
            uint64_t pg    : 12;
            uint64_t blk   : 15;
            uint64_t rsv   : 14;
        } g;

        uint64_t ppa;
    };
};
typedef void (nvm_callback_fn) (void *arg);
struct nvm_callback {
    nvm_callback_fn *cb_fn;
    void            *opaque;
    uint64_t         ts;
};
struct nvm_mmgr_io_cmd {
    struct nvm_io_cmd       *nvm_io;
    struct nvm_ppa_addr     ppa;
    struct nvm_channel      *ch;
    struct nvm_callback     callback;
    uint64_t                prp[32]; /* max of 32 sectors */
    uint64_t                md_prp;
    uint8_t                 status;
    uint8_t                 cmdtype;
    uint32_t                pg_index; /* pg index inside nvm_io_cmd */
    uint32_t                pg_sz;
    uint16_t                n_sectors;
    uint32_t                sec_sz;
    uint32_t                md_sz;
    uint16_t                sec_offset; /* first sector in the ppa vector */
    uint8_t                 force_sync_md;
    uint8_t                 force_sync_data[32];
    uint32_t                sync_count;
    //pthread_mutex_t         *sync_mutex;
    //struct timeval          tstart;
    //struct timeval          tend;

    /* MMGR specific */
    //uint8_t                 rsvd[170];    /* Obsolete FPGA */
    uint8_t                 rsvd[128];       /* Volt + ELEOS */
};
struct nvm_io_cmd {
    uint64_t                    cid;
    struct nvm_channel          *channel[64];
    struct nvm_ppa_addr         ppalist[256];
    struct nvm_io_status        status;
    struct nvm_mmgr_io_cmd      mmgr_io[64];
    struct nvm_callback         callback;
    void                        *req;
    void                        *mq_req;
    void                        *opaque;
    uint64_t                    prp[256]; /* maximum 1 MB for block I/O */
    uint64_t                    md_prp[256];
    uint32_t                    sec_sz;
    uint32_t                    md_sz;
    uint32_t                    n_sec;
    uint64_t                    slba;
    uint8_t                     cmdtype;
    //pthread_mutex_t             mutex;
};
struct nvm_mmgr_geometry {
    uint8_t     n_of_ch;
    uint8_t     lun_per_ch;
    uint16_t    blk_per_lun;
    uint16_t    pg_per_blk;
    uint16_t    sec_per_pg;
    uint8_t     n_of_planes;
    uint32_t    pg_size;
    uint32_t    sec_oob_sz;

    /* calculated values */
    uint32_t    sec_per_pl_pg;
    uint32_t    sec_per_blk;
    uint32_t    sec_per_lun;
    uint32_t    sec_per_ch;
    uint32_t    pg_per_lun;
    uint32_t    pg_per_ch;
    uint32_t    blk_per_ch;
    uint64_t    tot_sec;
    uint64_t    tot_pg;
    uint32_t    tot_blk;
    uint32_t    tot_lun;
    uint32_t    sec_size;
    uint32_t    pl_pg_size;
    uint32_t    blk_size;
    uint64_t    lun_size;
    uint64_t    ch_size;
    uint64_t    tot_size;
    uint32_t    pg_oob_sz;
    uint32_t    pl_pg_oob_sz;
    uint32_t    blk_oob_sz;
    uint32_t    lun_oob_sz;
    uint64_t    ch_oob_sz;
    uint64_t    tot_oob_sz;
};
enum mmgr_flags {
    MMGR_FLAG_PL_CMD        = (1 << 0), /* Accept multi plane page commands */
    MMGR_FLAG_MIN_CP_TIME   = (1 << 2)  /* Use the minimum checkpoint interval*/
};
struct nvm_magic {
    uint32_t rsvd;
    uint32_t magic;
} __attribute__((packed));
struct nvm_io_data {
    struct nvm_channel *ch;
    uint8_t             n_pl;
    uint32_t            pg_sz;
    uint8_t            *buf;
    uint8_t           **pl_vec;  /* Array of plane data (first sector) */
    uint8_t           **oob_vec; /* Array of OOB area (per sector) */
    uint8_t          ***sec_vec; /* Array of sectors + OOB [plane][sector] */
    uint32_t            meta_sz;
    uint32_t            buf_sz;
    uint8_t            *mod_oob; /* OOB as SGL can be buffered here */
};
struct nvm_mmgr;
typedef int     (nvm_mmgr_read_pg)(struct nvm_mmgr_io_cmd *);
typedef int     (nvm_mmgr_write_pg)(struct nvm_mmgr_io_cmd *);
typedef int     (nvm_mmgr_erase_blk)(struct nvm_mmgr_io_cmd *);
typedef int     (nvm_mmgr_get_ch_info)(struct nvm_channel *, uint16_t);
typedef int     (nvm_mmgr_set_ch_info)(struct nvm_channel *, uint16_t);
typedef void    (nvm_mmgr_exit)(struct nvm_mmgr *);
struct nvm_mmgr_ops {
    nvm_mmgr_read_pg       *read_pg;
    nvm_mmgr_write_pg      *write_pg;
    nvm_mmgr_erase_blk     *erase_blk;
    nvm_mmgr_exit          *exit;
    nvm_mmgr_get_ch_info   *get_ch_info;
    nvm_mmgr_set_ch_info   *set_ch_info;
};
struct nvm_channel;
struct nvm_mmgr {
    const char                  *name;
    struct nvm_mmgr_ops         *ops;
    struct nvm_mmgr_geometry    *geometry;
    struct nvm_channel          *ch_info;
    uint8_t                     flags;
};
struct nvm_channel {
    uint16_t                    ch_id;
    uint16_t                    ch_mmgr_id;
    uint64_t                    ns_pgs;
    uint64_t                    slba;
    uint64_t                    elba;
    uint64_t                    tot_bytes;
    uint16_t                    mmgr_rsv; /* number of blks reserved by mmgr */
    uint16_t                    ftl_rsv;  /* number of blks reserved by ftl */
    struct nvm_mmgr             *mmgr;
    struct nvm_ftl              *ftl;
    struct nvm_mmgr_geometry    *geometry;
    struct nvm_ppa_addr         mmgr_rsv_list[16]; /* list of mmgr rsvd blks */
    struct nvm_ppa_addr         ftl_rsv_list[16];  /* list of ftl rsvd blks */
    //LIST_ENTRY(nvm_channel)     entry;
    union {
        struct {
            uint64_t   ns_id         :16;
            uint64_t   ns_part       :32;
            uint64_t   ftl_id        :8;
            uint64_t   in_use        :8;
        } i;
        uint64_t       nvm_info;
    };
};
//typedef int (ox_nvm_parser_fn)(NvmeRequest *req, NvmeCmd *cmd);

struct nvm_parser_cmd {
    const char           name[MAX_NAME_SIZE];
    uint8_t              opcode;
    uint8_t              queue_type;
    //ox_nvm_parser_fn    *opcode_fn;
};
/* ssd_os64: Change dma->prp to uint64_t */
struct nvm_dma {
    void    *ptr;
    uint32_t prp;
    uint64_t size;
    uint8_t  direction;
};