src/bindings/generated.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_mmgr_geometry {
    pub n_of_ch: u8,
    pub lun_per_ch: u8,
    pub blk_per_lun: u16,
    pub pg_per_blk: u16,
    pub sec_per_pg: u16,
    pub n_of_planes: u8,
    pub pg_size: u32,
    pub sec_oob_sz: u32,
    pub sec_per_pl_pg: u32,
    pub sec_per_blk: u32,
    pub sec_per_lun: u32,
    pub sec_per_ch: u32,
    pub pg_per_lun: u32,
    pub pg_per_ch: u32,
    pub blk_per_ch: u32,
    pub tot_sec: u32,
    pub tot_pg: u32,
    pub tot_blk: u32,
    pub tot_lun: u32,
    pub sec_size: u32,
    pub pl_pg_size: u32,
    pub blk_size: u32,
    pub lun_size: u32,
    pub ch_size: u32,
    pub tot_size: u32,
    pub pg_oob_sz: u32,
    pub pl_pg_oob_sz: u32,
    pub blk_oob_sz: u32,
    pub lun_oob_sz: u32,
    pub ch_oob_sz: u32,
    pub tot_oob_sz: u32,
}
pub const mmgr_flags_MMGR_FLAG_PL_CMD: mmgr_flags = 1;
pub const mmgr_flags_MMGR_FLAG_MIN_CP_TIME: mmgr_flags = 4;
pub type mmgr_flags = ::core::ffi::c_uint;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_magic {
    pub rsvd: u32,
    pub magic: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_io_data {
    pub ch: *mut nvm_channel,
    pub n_pl: u8,
    pub pg_sz: u32,
    pub buf: *mut u8,
    pub pl_vec: *mut *mut u8,
    pub oob_vec: *mut *mut u8,
    pub sec_vec: *mut *mut *mut u8,
    pub meta_sz: u32,
    pub buf_sz: u32,
    pub mod_oob: *mut u8,
}
pub type nvm_mmgr_read_pg = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut nvm_mmgr_io_cmd) -> ::core::ffi::c_int,
>;
pub type nvm_mmgr_write_pg = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut nvm_mmgr_io_cmd) -> ::core::ffi::c_int,
>;
pub type nvm_mmgr_erase_blk = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut nvm_mmgr_io_cmd) -> ::core::ffi::c_int,
>;
pub type nvm_mmgr_get_ch_info = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut nvm_channel, arg2: u16) -> ::core::ffi::c_int,
>;
pub type nvm_mmgr_set_ch_info = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut nvm_channel, arg2: u16) -> ::core::ffi::c_int,
>;
pub type nvm_mmgr_exit = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut nvm_mmgr),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_mmgr_ops {
    pub read_pg: nvm_mmgr_read_pg,
    pub write_pg: nvm_mmgr_write_pg,
    pub erase_blk: nvm_mmgr_erase_blk,
    pub exit: nvm_mmgr_exit,
    pub get_ch_info: nvm_mmgr_get_ch_info,
    pub set_ch_info: nvm_mmgr_set_ch_info,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_mmgr {
    pub name: *const ::core::ffi::c_char,
    pub ops: *mut nvm_mmgr_ops,
    pub geometry: *mut nvm_mmgr_geometry,
    pub ch_info: *mut nvm_channel,
    pub flags: u8,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct nvm_channel {
    pub ch_id: u16,
    pub ch_mmgr_id: u16,
    pub ns_pgs: u64,
    pub slba: u64,
    pub elba: u64,
    pub tot_bytes: u64,
    pub mmgr_rsv: u16,
    pub ftl_rsv: u16,
    pub mmgr: *mut nvm_mmgr,
    pub ftl: *mut nvm_ftl,
    pub geometry: *mut nvm_mmgr_geometry,
    pub mmgr_rsv_list: [nvm_ppa_addr; 16usize],
    pub ftl_rsv_list: [nvm_ppa_addr; 16usize],
    pub __bindgen_anon_1: nvm_channel__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union nvm_channel__bindgen_ty_1 {
    pub i: nvm_channel__bindgen_ty_1__bindgen_ty_1,
    pub nvm_info: u64,
}
#[repr(C)]
#[repr(align(8))]
#[derive(Debug, Copy, Clone)]
pub struct nvm_channel__bindgen_ty_1__bindgen_ty_1 {
    pub _bitfield_align_1: [u32; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 8usize]>,
}
impl nvm_channel__bindgen_ty_1__bindgen_ty_1 {
    #[inline]
    pub fn ns_id(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 16u8) as u64) }
    }
    #[inline]
    pub fn set_ns_id(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 16u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn ns_id_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 8usize],
                >>::raw_get(::core::ptr::addr_of!((*this)._bitfield_1), 0usize, 16u8)
                    as u64,
            )
        }
    }
    #[inline]
    pub unsafe fn set_ns_id_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 8usize],
            >>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                0usize,
                16u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn ns_part(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(16usize, 32u8) as u64) }
    }
    #[inline]
    pub fn set_ns_part(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(16usize, 32u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn ns_part_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 8usize],
                >>::raw_get(::core::ptr::addr_of!((*this)._bitfield_1), 16usize, 32u8)
                    as u64,
            )
        }
    }
    #[inline]
    pub unsafe fn set_ns_part_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 8usize],
            >>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                16usize,
                32u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn ftl_id(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(48usize, 8u8) as u64) }
    }
    #[inline]
    pub fn set_ftl_id(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(48usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn ftl_id_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 8usize],
                >>::raw_get(::core::ptr::addr_of!((*this)._bitfield_1), 48usize, 8u8)
                    as u64,
            )
        }
    }
    #[inline]
    pub unsafe fn set_ftl_id_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 8usize],
            >>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                48usize,
                8u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn in_use(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(56usize, 8u8) as u64) }
    }
    #[inline]
    pub fn set_in_use(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(56usize, 8u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn in_use_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(
                <__BindgenBitfieldUnit<
                    [u8; 8usize],
                >>::raw_get(::core::ptr::addr_of!((*this)._bitfield_1), 56usize, 8u8)
                    as u64,
            )
        }
    }
    #[inline]
    pub unsafe fn set_in_use_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<
                [u8; 8usize],
            >>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                56usize,
                8u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        ns_id: u64,
        ns_part: u64,
        ftl_id: u64,
        in_use: u64,
    ) -> __BindgenBitfieldUnit<[u8; 8usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 8usize]> = Default::default();
        __bindgen_bitfield_unit
            .set(
                0usize,
                16u8,
                {
                    let ns_id: u64 = unsafe { ::core::mem::transmute(ns_id) };
                    ns_id as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                16usize,
                32u8,
                {
                    let ns_part: u64 = unsafe { ::core::mem::transmute(ns_part) };
                    ns_part as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                48usize,
                8u8,
                {
                    let ftl_id: u64 = unsafe { ::core::mem::transmute(ftl_id) };
                    ftl_id as u64
                },
            );
        __bindgen_bitfield_unit
            .set(
                56usize,
                8u8,
                {
                    let in_use: u64 = unsafe { ::core::mem::transmute(in_use) };
                    in_use as u64
                },
            );
        __bindgen_bitfield_unit
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_parser_cmd {
    pub name: [::core::ffi::c_char; 31usize],
    pub opcode: u8,
    pub queue_type: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_dma {
    pub ptr: *mut ::core::ffi::c_void,
    pub prp: u32,
    pub size: u64,
    pub direction: u8,
}
pub type ssd_os_extension_fn = ::core::option::Option<
    unsafe extern "C" fn(context: *mut ::core::ffi::c_void) -> ::core::ffi::c_int,
>;
pub type ssd_os_stage_fn = ::core::option::Option<
    unsafe extern "C" fn(context: *mut ::core::ffi::c_void) -> *mut ::core::ffi::c_void,
>;
pub type ssd_os_ctrl_fn = ::core::option::Option<
    unsafe extern "C" fn() -> ::core::ffi::c_int,
>;
pub type ssd_os_conn_ring_fn = ::core::option::Option<
    unsafe extern "C" fn(entry: *mut lring_entry) -> ::core::ffi::c_int,
>;
pub type ssd_os_conn_fn = ::core::option::Option<
    unsafe extern "C" fn(entry: *mut lring_entry) -> *mut pipeline,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct extension {
    pub magic: [::core::ffi::c_char; 4usize],
    pub name: [::core::ffi::c_char; 32usize],
    pub extension_fn: ssd_os_extension_fn,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct stage {
    pub magic: [::core::ffi::c_char; 4usize],
    pub name: [::core::ffi::c_char; 32usize],
    pub init_fn: ssd_os_ctrl_fn,
    pub exit_fn: ssd_os_ctrl_fn,
    pub stage_fn: ssd_os_stage_fn,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pipeline {
    pub name: [::core::ffi::c_char; 32usize],
    pub internal: [*mut ::core::ffi::c_void; 2usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct connector {
    pub magic: [::core::ffi::c_char; 4usize],
    pub name: [::core::ffi::c_char; 32usize],
    pub nosched: u32,
    pub init_fn: ssd_os_ctrl_fn,
    pub exit_fn: ssd_os_ctrl_fn,
    pub conn_fn: ssd_os_conn_fn,
    pub ring_fn: ssd_os_conn_ring_fn,
}
pub type ssd_os_thread = ::core::option::Option<
    unsafe extern "C" fn(cpu: ::core::ffi::c_int, context: *mut ::core::ffi::c_void),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltStatus {
    pub ready: u8,
    pub active: u8,
    pub allocated_memory: u64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltPage {
    pub state: u8,
    pub data: *mut u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltBlock {
    pub id: u16,
    pub life: u16,
    pub next_pg: *mut VoltPage,
    pub pages: *mut VoltPage,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltLun {
    pub blk_offset: *mut VoltBlock,
}
